batch mysql setting

--- a/src/main/resources/DB/test_application.properties
+++ b/src/main/resources/DB/test_application.properties
@@ -3,7 +3,7 @@
 ###########################################################
 spring.jpa.hibernate.ddl-auto=update
 spring.datasource.driver-class-name=com.mysql.jdbc.Driver
-spring.datasource.url=jdbc:mysql://localhost:3306/db_type?characterEncoding=UTF-8&ENGINE=InnoDB&CHARSET=UTF-8
+spring.datasource.url=jdbc:mysql://localhost:3306/db_type?characterEncoding=UTF-8
 spring.datasource.username=root
 spring.datasource.password=root
 #spring.jpa.database-platform=org.hibernate.dialect.MySQLDialect
@@ -27,7 +27,7 @@ spring.datasource.initialization-mode=always
 spring.batch.initialize-schema=always
  # Execute all Spring Batch jobs in the context on startup.
 # 这是因为spring batch在加载的时候job默认都会执行。解决方法：在application.properties中增加配置：
-# spring.batch.job.enabled=false
+spring.batch.job.enabled=false
 # Comma-separated list of job names to execute on startup (for instance,`job1,job2`). By default, all Jobs found in the context are executed.
 spring.batch.job.names=
  # Path to the SQLfile to use to initialize the database schema.
